// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create tracker for playlist 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "playlists": Array [
            "totally-random-uuid-0",
          ],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "date": 949363200000,
          "tracks": Array [],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "date": 949363200000,
          "tracks": Array [
            Object {
              "author": Object {
                "id": "testAuthorId",
                "username": "testuser",
                "version": "1",
              },
              "link": "https://test.com",
              "name": "[test (1:10)](https://test.com) [<@testAuthorId>]",
              "version": "1",
            },
          ],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"[test (1:10)](https://test.com) [<@testAuthorId>] has been added to the queue\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"Now playing: [test (1:10)](https://test.com) [<@testAuthorId>]\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"End of playlist, will disconnect in 5 minutes.\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
]
`;

exports[`should differentiate tracking between playlists 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "playlists": Array [
            "totally-random-uuid-0",
          ],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "date": 949363200000,
          "tracks": Array [],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "date": 949363200000,
          "tracks": Array [
            Object {
              "author": Object {
                "id": "testAuthorId",
                "username": "testuser",
                "version": "1",
              },
              "link": "https://test.com",
              "name": "[test (1:10)](https://test.com) [<@testAuthorId>]",
              "version": "1",
            },
          ],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"[test (1:10)](https://test.com) [<@testAuthorId>] has been added to the queue\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"Now playing: [test (1:10)](https://test.com) [<@testAuthorId>]\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/disconnect",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "disconnected",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"Bye!\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "playlists": Array [
            "totally-random-uuid-0",
            "totally-random-uuid-1",
          ],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "date": 949363200000,
          "tracks": Array [],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "date": 949363200000,
          "tracks": Array [
            Object {
              "author": Object {
                "id": "testAuthorId",
                "username": "testuser",
                "version": "1",
              },
              "link": "https://test.com",
              "name": "[test (1:10)](https://test.com) [<@testAuthorId>]",
              "version": "1",
            },
          ],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"[test (1:10)](https://test.com) [<@testAuthorId>] has been added to the queue\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"Now playing: [test (1:10)](https://test.com) [<@testAuthorId>]\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 7,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 7,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"End of playlist, will disconnect in 5 minutes.\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
]
`;

exports[`should track multiple tracks in the same playlist 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "playlists": Array [
            "totally-random-uuid-0",
          ],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "date": 949363200000,
          "tracks": Array [],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "date": 949363200000,
          "tracks": Array [
            Object {
              "author": Object {
                "id": "testAuthorId",
                "username": "testuser",
                "version": "1",
              },
              "link": "https://test.com",
              "name": "[test (1:10)](https://test.com) [<@testAuthorId>]",
              "version": "1",
            },
          ],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"[test (1:10)](https://test.com) [<@testAuthorId>] has been added to the queue\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"Now playing: [test (1:10)](https://test.com) [<@testAuthorId>]\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "found",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "event": EventFake {
          "message": JMessageFake {
            "_reactions": Array [],
            "author": Object {
              "bot": false,
              "id": "testAuthorId",
              "username": "testuser",
            },
            "channelId": "testChannelId",
            "content": "/play test",
          },
          "timestamp": 949363200000,
        },
        "item": Object {
          "date": 949363200000,
          "tracks": Array [
            Object {
              "author": Object {
                "id": "testAuthorId",
                "username": "testuser",
                "version": "1",
              },
              "link": "https://test.com",
              "name": "[test (1:10)](https://test.com) [<@testAuthorId>]",
              "version": "1",
            },
            Object {
              "author": Object {
                "id": "testAuthorId",
                "username": "testuser",
                "version": "1",
              },
              "link": "https://test2.com",
              "name": "[test2 (1:10)](https://test2.com) [<@testAuthorId>]",
              "version": "1",
            },
          ],
          "version": "1",
        },
        "result": Object {
          "playlist": "trackingEvent",
        },
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"[test2 (1:10)](https://test2.com) [<@testAuthorId>] has been added to the queue\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"Now playing: [test2 (1:10)](https://test2.com) [<@testAuthorId>]\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 10,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 10,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
  \\"title\\": null,
  \\"type\\": \\"rich\\",
  \\"description\\": \\"End of playlist, will disconnect in 5 minutes.\\",
  \\"url\\": null,
  \\"timestamp\\": null,
  \\"color\\": null,
  \\"fields\\": [],
  \\"thumbnail\\": null,
  \\"image\\": null,
  \\"author\\": null,
  \\"footer\\": null
}",
      },
    },
  },
]
`;
